# AIDD-30-Day-Challenge-Task-4

./: .gitignore  README.md  gemini.md  list_models.py  pyproject.toml
src/: agent.py  app.py
src/.gemini/: settings.json
task_4_agenticai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
